--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
   <title>Document</title>
 </head>
 <body>
+  <header class="header">
+    header
+  </header>
   <div class="slogan">My first commit</div>
 </body>
 </html>
