--- a/index.html
+++ b/index.html
@@ -10,5 +10,8 @@
     header
   </header>
   <div class="slogan">My first commit</div>
+  <footer class="footer">
+    footer
+  </footer>
 </body>
 </html>
